<resources>
    <string name="app_name">MiniActivitat2</string>
    <string name="bienvenido">Bienvenido</string>
    <string name="escribe_mensaje_a_repetir">Escribe mensaje a repetir</string>
    <string name="ingresa_repeticiones_mensaje">Número de repeticiones</string>
    <string name="repetir">Aplicar</string>
    <string name="repeticiones_texto">3</string>
    <string name="texto_a_repetir">Hola</string>
    <string name="mensaje_repetido">Default message</string>
    <string name="Atras">Volver</string>
</resources>