<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <TextView
        android:id="@+id/title_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bienvenido"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_gravity="center"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/escribe_mensaje_a_repetir" />

        <EditText
            android:id="@+id/text_to_repeat_editText"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/texto_a_repetir"
            android:inputType="text" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ingresa_repeticiones_mensaje" />

        <EditText
            android:id="@+id/times_to_repeat_editText"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:inputType="number"
            android:text="@string/repeticiones_texto" />

    </LinearLayout>

    <Button
        android:id="@+id/go_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/repetir" />

</LinearLayout>